# transpose-timing-tests

./: .gitignore  Cargo.toml  POST.md  README.md
kernels/: transpose-ballot.comp  transpose-ballot.hlsl  transpose-shuffle-WGS=(32,1).comp  transpose-shuffle-WGS=(32,1).spv  transpose-shuffle-WGS=(64,1).comp  transpose-shuffle-WGS=(64,1).spv  transpose-shuffle-template.comp  transpose-shuffle.comp  transpose-threadgroup-NBM=4096_WGS=(4,32,1).comp  transpose-threadgroup-WGS=(1,32).spv  transpose-threadgroup-WGS=(10,32).spv  transpose-threadgroup-WGS=(11,32).spv  transpose-threadgroup-WGS=(12,32).spv  transpose-threadgroup-WGS=(13,32).spv  transpose-threadgroup-WGS=(14,32).spv  transpose-threadgroup-WGS=(15,32).spv  transpose-threadgroup-WGS=(16,32).spv  transpose-threadgroup-WGS=(17,32).spv  transpose-threadgroup-WGS=(18,32).spv  transpose-threadgroup-WGS=(19,32).spv  transpose-threadgroup-WGS=(2,32).spv  transpose-threadgroup-WGS=(20,32).spv  transpose-threadgroup-WGS=(21,32).spv  transpose-threadgroup-WGS=(22,32).spv  transpose-threadgroup-WGS=(23,32).spv  transpose-threadgroup-WGS=(24,32).spv  transpose-threadgroup-WGS=(25,32).spv  transpose-threadgroup-WGS=(26,32).spv  transpose-threadgroup-WGS=(27,32).spv  transpose-threadgroup-WGS=(28,32).spv  transpose-threadgroup-WGS=(29,32).spv  transpose-threadgroup-WGS=(3,32).spv  transpose-threadgroup-WGS=(30,32).spv  transpose-threadgroup-WGS=(31,32).spv  transpose-threadgroup-WGS=(32,32).spv  transpose-threadgroup-WGS=(4,32).comp  transpose-threadgroup-WGS=(4,32).spv  transpose-threadgroup-WGS=(5,32).spv  transpose-threadgroup-WGS=(6,32).spv  transpose-threadgroup-WGS=(7,32).spv  (+5 more)
kernels/comp/: transpose-hybrid-shuffle-WGS=(1,1).comp  transpose-hybrid-shuffle-WGS=(32,1).comp  transpose-shuffle-WGS=(1024,1).comp  transpose-shuffle-WGS=(128,1).comp  transpose-shuffle-WGS=(256,1).comp  transpose-shuffle-WGS=(32,1).comp  transpose-shuffle-WGS=(512,1).comp  transpose-shuffle-WGS=(64,1).comp  transpose-threadgroup-WGS=(1,32).comp  transpose-threadgroup-WGS=(64,32).comp
kernels/spv/: transpose-hybrid shuffle-WGS=(1024,1).spv  transpose-hybrid shuffle-WGS=(128,1).spv  transpose-hybrid shuffle-WGS=(256,1).spv  transpose-hybrid shuffle-WGS=(32,1).spv  (+25 more)
plots/: plot.py
ref-docs/: CUDA_Occupancy_Calculator.xls
src/: bitmats.rs  file_utils.rs  gpu.rs  main.rs  task.rs
(+16 files in other folders)
