[package]
name = "transpose-timing-tests"
version = "0.1.0"
authors = ["bhmerchant@gmail.com <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gfx-backend-dx12", "gfx-backend-vulkan"]
dx12 = ["gfx-backend-dx12"]
vk = ["gfx-backend-vulkan"]

[dependencies]
log = "0.4"
gfx-hal = "0.4.1"
shaderc = "0.6.1"
rand = "0.7.3"
env_logger = "0.6"

[dependencies.gfx-backend-dx12]
version = "0.4.2"
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.4.2"
optional = true
features = ["x11"]
